--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,13 +56,13 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container bootstrap-margin">
         <div class="row">
-          <div class="span9">
+          <div class="span7">
             <%= bootstrap_flash %>
             <%= yield %>
           </div>
-          <div class="span3">
+          <div class="span5">
             <div class="well sidebar-nav">
               <h3>Sidebar</h3>
               <ul class="nav nav-list">
