--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,3 +1,12 @@
 <h1>Hey gurl...</h1>
 
 <p>On a scale from 1-10, you're a <%= @math %>!</p>
+
+
+<p>Our last user is: <%= @last_user_name %> with an email address of <%= @last_user_email %>. </p>
+
+<%= form_for @new_user, :url => { :action => "create" } do |f| %>
+  <%= f.text_field :name %>
+   <%= f.text_field :email %>
+  <%= f.submit "Create New Account", class: "btn btn-primary"%>
+<% end %>
